[project]
name = "ssa-callbook"
version = "0.1.0"
description = "SSA Callbook - Swedish amateur radio callsign lookup"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "rich>=13.0.0",
    "gridtools>=1.0.0",
    "textual>=0.100.0",
]

[tool.setuptools]
py-modules = ["main", "tui"]

[project.scripts]
ssacall = "main:main"
ssacall-tui = "tui:run_tui"
